package.json에 proxy 설정 추가

--- a/krampoline/package.json
+++ b/krampoline/package.json
@@ -32,6 +32,9 @@
 		"test": "craco test",
 		"commit": "cz"
 	},
+
+	"proxy": "http://localhost:8080",
+	
 	"browserslist": {
 		"production": [
 			">0.2%",
