--- a/krampoline/package.json
+++ b/krampoline/package.json
@@ -4,7 +4,6 @@
 	"private": true,
 	"dependencies": {
 		"@craco/craco": "^7.1.0",
-		"@radix-ui/react-select": "^2.0.0",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -32,9 +31,12 @@
 		"test": "craco test",
 		"commit": "cz"
 	},
-
-	"proxy": "http://localhost:8080",
-	
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
 	"browserslist": {
 		"production": [
 			">0.2%",
@@ -55,6 +57,8 @@
 	"devDependencies": {
 		"commitizen": "^4.3.0",
 		"cz-customizable": "^7.0.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-prettier": "^5.0.1",
 		"prettier": "^3.1.0",
 		"tailwindcss": "^3.4.1"
 	}
