--- a/krampoline/package.json
+++ b/krampoline/package.json
@@ -2,6 +2,7 @@
   "name": "switch-con",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.kakaobrain.com",
   "dependencies": {
     "@craco/craco": "^7.1.0",
     "@testing-library/jest-dom": "^5.17.0",
